--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+/*Blue: #005fcf 
+Red: #CC333 */
+
 * {
   padding: 0;
   margin: 0;
