--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,15 +1,44 @@
 .nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    max-width: 1500px;
+    margin: 0 auto;
 }
 
 .nav__links {
-    gap: 16px;
+    gap: 38px;
+}
+
+.nav__list {
+    transition: all 300ms ease-in-out;
+}
+
+.nav__list:hover {
+    transform: scale(1.1);
+    
 }
 
 .nav__link {
     text-decoration: none;
     color: black;
+    font-size: 18px;
+    transition: all 300ms ease-in-out;
 }
 
+.nav__link:hover {
+    color: #cc3333;
+}
+
+.contact--us {
+    border-radius: 30px;
+    text-decoration: none;
+    background-color: #005fcf;
+    color: white;
+    padding: 12px 28px;
+    transition: all 300ms ease-in-out;
+}
+
+.contact--us:hover {
+    background-color: #cc3333;
+}
