--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,3 +1,7 @@
+.red {
+    color: #cc3333;
+}
+
 .contact__title {
     display: flex;
     justify-content: center;
@@ -20,6 +24,8 @@
 .contact__right  {
     display: flex;
     flex-direction: column;
+align-items:start;
+    
 }
 
 .email {
@@ -29,4 +35,20 @@
 .contact__poc {
     padding: 20px 0;
     line-height: 1.5;
+}
+
+.form__item--label {
+    margin-bottom: 4px;
+}
+
+.form__item {
+    margin: 12px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.input {
+    padding: 4px 24px;
+    border-radius: 10px;
+    border: 1px solid #8a8a8a;
 }
