--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -19,6 +19,10 @@
     color: black;
 }
 
-.footer__copyright {
-    
+.footer__link--container {
+    transition: all 300ms ease-in-out;
+}
+
+.footer__link--container:hover {
+    transform: scale(1.1);
 }
