--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-/*Blue: #005fcf 
-Red: #CC3333 */
+/*
+Blue: #253c95
+Red: #dd1f26
+*/
 
 * {
   padding: 0;
