--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,7 +1,3 @@
-.red {
-    color: #cc3333;
-}
-
 .contact__title {
     display: flex;
     justify-content: center;
@@ -9,8 +5,8 @@
 }
 
 .contact__wrapper {
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
+    justify-content: space-between;
     padding: 28px;
     margin: 0 300px;
 }
@@ -24,8 +20,14 @@
 .contact__right  {
     display: flex;
     flex-direction: column;
-align-items:start;
-    
+}
+
+.contact__img--wrapper {
+    max-width: 600px;
+}
+
+.contact--img {
+    width: 100%;
 }
 
 .email {
@@ -33,8 +35,11 @@ align-items:start;
 }
 
 .contact__poc {
-    padding: 20px 0;
-    line-height: 1.5;
+    line-height: 1.75;
+}
+
+.contact__emails {
+   line-height: 1.75;
 }
 
 .form__item--label {
@@ -45,10 +50,40 @@ align-items:start;
     margin: 12px 0;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .input {
-    padding: 4px 24px;
-    border-radius: 10px;
+    padding: 12px 300px 12px 16px;
+    border-radius: 5px;
     border: 1px solid #8a8a8a;
 }
+
+.form__submit {
+    padding: 18px 64px;
+    background-color: #005fcf;
+    color: white;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+    transition: all 200ms ease-in-out;
+}
+
+.form__submit:hover {
+    transform: scale(1.1);
+}
+
+.form__submit:active {
+    transform: scale(0.8);
+}
+
+.contact__bottom {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 44px;
+    max-width: 1300px;
+}
+
+/*     background-color: rgba(0, 95, 207, 0.3);
+*/
