--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -61,7 +61,7 @@
 
 .form__submit {
     padding: 18px 64px;
-    background-color: #005fcf;
+    background-color: #253c95;
     color: white;
     border-radius: 30px;
     border: none;
