--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,56 +1,98 @@
+.nav--container {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    border-bottom: 2px solid #eee;
+}
+
 .nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    max-width: 1500px;
-    margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1500px;
+  margin: 0 auto;
 }
 
 .nav__links {
-    gap: 38px;
+  gap: 38px;
 }
 
 .nav__list {
-    transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
 }
 
 .nav__list:hover {
-    transform: scale(1.1);
-}
-
-.nav__list:active {
-    transform: scale(0.8);
+  transform: scale(1.1);
 }
 
 .nav__link {
-    text-decoration: none;
-    color: black;
-    font-size: 19px;
-    transition: all 300ms ease-in-out;
+  text-decoration: none;
+  color: black;
+  font-size: 19px;
+  transition: all 300ms ease-in-out;
+  display: flex;
+  align-items: center;
 }
 
 .nav__link:hover {
-    color: #dd1f26;
+  color: #dd1f26;
 }
 
 .contact--us {
-    border-radius: 30px;
-    text-decoration: none;
-    background-color: #253c95;
-    color: white;
-    padding: 12px 28px;
-    transition: all 300ms ease-in-out;
+  border-radius: 30px;
+  text-decoration: none;
+  background-color: #253c95;
+  color: white;
+  padding: 12px 28px;
+  transition: all 300ms ease-in-out;
 }
 
 .contact--us:hover {
-    background-color: #dd1f26;
+  background-color: #dd1f26;
 }
 
 .nav__img-container {
-    max-width: 200px;
-    margin: 16px 0;
+  max-width: 200px;
+  margin: 16px 0;
 }
 
 .nav__img {
-    width: 100%;
+  width: 100%;
+}
+
+/* Dropdown Menu */
+
+.dropdown {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 120px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown li a{
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-size: 14px;
+    font-weight: 400;
+    transition: all 300ms ease-in-out;
+}
+
+.dropdown li a:hover {
+    color: #dd1f26;
+}
+
+.dropdown__list:hover .dropdown {
+  display: block;
+}
+
+.dropdown--btn {
+    margin-left: 2px;
+    margin-top: 1px;
+    width: 20px;
 }
