--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,33 +1,30 @@
 .contact__title {
     display: flex;
     justify-content: center;
-    margin: 28px 0 0 0;
+    color: white;
+    font-size: 48px;
+}
+
+.contact__title--wrapper {
+    padding: 150px 0;
+    background: linear-gradient(115deg, rgb(0, 95, 207) 0%, rgb(221, 31, 38) 100%);
 }
 
 .contact__wrapper {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto auto;
     padding: 28px;
-    margin: 0 300px;
 }
 
 .contact__left  {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .contact__right  {
     display: flex;
     flex-direction: column;
-}
-
-.contact__img--wrapper {
-    max-width: 600px;
-}
-
-.contact--img {
-    width: 100%;
+    align-items: center;
 }
 
 .email {
@@ -54,7 +51,7 @@
 }
 
 .input {
-    padding: 12px 300px 12px 16px;
+    padding: 12px 0 12px 16px;
     border-radius: 5px;
     border: 1px solid #8a8a8a;
 }
@@ -76,14 +73,3 @@
 .form__submit:active {
     transform: scale(0.8);
 }
-
-.contact__bottom {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 44px;
-    max-width: 1300px;
-}
-
-/*     background-color: rgba(0, 95, 207, 0.3);
-*/
