--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,7 +7,9 @@
 }
 
 .footer__links {
-    gap: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
 
 .footer__link {
