--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,37 +1,105 @@
 .about {
-    margin: 0 auto;
-    max-width: 1500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    max-width: 1300px;
+    height: 91vh;
+}
+
+.title__wrapper--left {
+    max-width: 650px;
 }
 
 .about--title {
     text-align: center;
-    margin: 20px 0;
+    margin: 28px 0;
+    font-size: 30px;
+}
+
+.title__wrapper--left > p {
+    line-height: 2;
+    font-size: 17px;
+}
+
+.about--img {
+    width: 100%;
+    max-width: 700px;
+}
+
+.about__partners {
+    background: linear-gradient(115deg, rgb(0, 95, 207) 0%, rgb(221, 31, 38) 100%);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 0;
+    margin: 40px 0;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+}
+
+.about__partners > h2 {
+    color: white;
+    font-size: 32px;
+}
+
+.about__partners--logos {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    max-width: 1300px;
+}
+
+.about__partners--logo {
+    max-width: 120px;
+    margin-top: 20px;
 }
 
 .about__icon--wrapper {
-    border: 3px solid #005fcf;
-    border-radius: 50px;
-    padding: 12px;
+    border: 3px solid #dbdada;
+    border-radius: 60px;
+    padding: 28px;
+    margin-bottom: 20px;
 }
 
 .about__icon {
-    height: 75px;
-    color: #005fcf;
+    height: 60px;
+    color: #253c95;
+}
+
+.about-canam--wrapper {
+    margin: 120px 0;
 }
 
 .about__container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 1300px;
+    padding-top: 40px;
 }
 
 .about__desc {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin: 12px 0;
+    padding: 16px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.06);
+}
+
+.about-canam--title {
+    margin-bottom: 12px;
 }
 
 .about__para {
-    max-width: 1000px;
-    line-height: 1.5;
+    max-width: 360px;
+    line-height: 2;
+    text-align: center;
 }
