--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -8,23 +8,35 @@
 .contact__title--wrapper {
     padding: 150px 0;
     background: linear-gradient(115deg, rgb(0, 95, 207) 0%, rgb(221, 31, 38) 100%);
+    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.5);
 }
 
 .contact__wrapper {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-flow: column;
     padding: 28px;
+    max-width: 1300px;
+    margin: 0 auto;
+    margin-top: 60px;
+    margin-bottom: 80px;
 }
 
 .contact__left  {
     display: flex;
     flex-direction: column;
+    border-right: 2px solid #eee;
 }
 
 .contact__right  {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 60px 0 60px;
+}
+
+.contact__right > h2 {
+    margin-bottom: 16px;
 }
 
 .email {
@@ -33,10 +45,23 @@
 
 .contact__poc {
     line-height: 1.75;
+    margin-bottom: 40px;
+}
+
+.contact__poc > p {
+    margin-bottom: 2px;
 }
 
 .contact__emails {
-   line-height: 1.75;
+    line-height: 1.75;
+}
+
+.contact__poc--title {
+    text-decoration: underline;
+}
+
+.email {
+    padding-bottom: 16px;
 }
 
 .form__item--label {
@@ -44,10 +69,11 @@
 }
 
 .form__item {
-    margin: 12px 0;
+    margin: 16px 0;
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 700px;
 }
 
 .input {
@@ -57,17 +83,20 @@
 }
 
 .form__submit {
-    padding: 18px 64px;
+    padding: 16px 60px;
+    margin-top: 12px;
     background-color: #253c95;
     color: white;
     border-radius: 30px;
     border: none;
     cursor: pointer;
+    font-size: 16px;
     transition: all 200ms ease-in-out;
 }
 
 .form__submit:hover {
     transform: scale(1.1);
+    background-color: #dd1f26;
 }
 
 .form__submit:active {
