--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 48px 0;
+    padding: 80px 0;
     gap: 36px;
 }
 
@@ -18,6 +18,7 @@
 }
 
 .footer__link--container {
+    padding: 0 12px 0 12px;
     transition: all 300ms ease-in-out;
 }
 
