--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -19,7 +19,7 @@
 .about--title {
     text-align: center;
     margin: 28px 0;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .title__wrapper--left > p {
@@ -45,7 +45,7 @@
 
 .about__partners > h2 {
     color: white;
-    font-size: 32px;
+    font-size: 34px;
 }
 
 .about__partners--logos {
@@ -54,11 +54,12 @@
     align-items: center;
     width: 100%;
     max-width: 1300px;
+    flex-wrap: wrap;
 }
 
 .about__partners--logo {
-    max-width: 120px;
-    margin-top: 20px;
+    max-width: 115px;
+    margin: 20px 16px 0 0;
 }
 
 .about__icon--wrapper {
