--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -10,6 +10,8 @@
     justify-content: space-around;
     max-width: 1300px;
     height: 91vh;
+    margin: 40px 0;
+    padding: 0 20px;
 }
 
 .title__wrapper--left {
@@ -104,3 +106,4 @@
     line-height: 2;
     text-align: center;
 }
+
