--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -66,43 +66,49 @@
 /* Dropdown Menu */
 
 .dropdown {
-  display: none;
   position: absolute;
+  display: flex;
+  flex-direction: column;
   background-color: #f9f9f9;
   min-width: 120px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 300ms ease-in-out;
 }
 
-.dropdown li a{
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    font-size: 14px;
-    font-weight: 400;
-    transition: all 300ms ease-in-out;
+.dropdown li a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .dropdown li a:hover {
-    color: #dd1f26;
+  color: #dd1f26;
 }
 
 .dropdown__list:hover .dropdown {
-  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 
 .dropdown__list:active .dropdown {
-  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 
 .dropdown--btn {
-    margin-left: 2px;
-    margin-top: 1px;
-    width: 20px;
+  margin-left: 2px;
+  margin-top: 1px;
+  width: 20px;
 }
+
 
 /** RESPONSIVE **/
 
@@ -123,7 +129,6 @@
     padding: 10px 24px;
     font-size: 16px;
   }
-  
 }
 
 @media (max-width: 768px) {
